@@ -1,3 +1,6 @@
+Tue Oct 16 15:18:26 2007 CEST
+(Magic): added big kludge for self extracting ZIP archives
+
 Tue Oct 16 13:49:23 2007 CEST
 (DataFilter): automatic type detection and unpacking of ZIP archives
 (XBase): new methods rows, enum_records; default to first "table"
